<resources>
    <string name="app_name">Test App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="enter_username">johndoe</string>
    <string name="login_button">login!</string>
    <string name="enter_password">password</string>
    <string name="username_text">username:</string>
    <string name="password_text">password:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>